<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        tools:context=".Contact">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/top"
                  android:orientation="vertical"
                  tools:ignore="UseCompoundDrawables">
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="250dp"
                   android:src="@drawable/profile"
                   android:layout_marginTop="20dp"
                   android:id="@+id/about"
                   android:contentDescription="@string/about"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/contact"
                  android:layout_marginTop="10sp"
                  android:textSize="50sp"
                  android:fontFamily="@font/gilroy"
                  android:textColor="@color/stroke"
                  android:layout_gravity="center"
                  android:textAlignment="center"
        />

    </LinearLayout>
    <ScrollView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:layout_below="@+id/top"
                android:layout_marginTop="20dp"
                android:background="@color/bg2">


        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/stroke"
                  android:textSize="30sp"
                  android:fontFamily="@font/gilroylight"
                  android:text="@string/contactparagraph"
                  android:textStyle="normal"
                  android:textAlignment="center"
                  android:layout_margin="15sp"
                  android:layout_marginBottom="15sp"

        />

    </ScrollView>
</RelativeLayout>